--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  width: 1200px;
+  width: 1100px;
   margin: 0 auto;
   position: relative;
 }
@@ -105,7 +105,16 @@ article header p strong {
 
 .related-author {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.related-author::after {
+  content: " ---";
+}
+
+.related-author::before {
+  content: "--- ";
 }
 
 aside {
@@ -201,67 +210,7 @@ h2::after {
   right: -25px;
 }
 
-/* using float: */
-
-.author {
-  float: left;
-  margin-left: 20px;
-  margin-bottom: 20px;
-}
-
-.author-img {
-  float: left;
-}
-
-h1 {
-  float: left;
-
-  padding: 20px;
-}
-
-nav {
-  float: right;
-}
-
-nav a:link {
-  padding-left: 20px;
-  color: #0e0b2b;
-}
-
-nav a:link:last-child {
-  padding-right: 20px;
-}
-
-/* for float clear(alltime eti use korte hobe float use korle ) */
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: block;
-
-  /* diplay block nah dile hobe nah karon float alltime kaaj kore block element er belay jodi kono inline-block or inline er jonneo o float clear kora laage tahole take age display:block e convert kore nite hobe */
-}
-
-aside {
-  float: right;
-  /* position: absolute; */
-  top: 250px;
-  right: 0px;
-  width: 300px;
-}
-
-article {
-  float: left;
-  /* position: relative; */
-
-  width: 825px;
-
-  /* amra container er width diyechi 1200px er jonne ami article er width:825 rekechi and aside er width:300px rekechi er fole 300+825 = 1125 hoy and baki 75px rekechi ami article and aside er moddeh faka rakhar jonne: */
-}
-
 footer p {
-  /* eikhane e footer e clear:both deaar means holo amra jani float ti around kore pura element er moddeh er fole footer er moddeo float ti around kore er postion change kore feleche er jonne jate footer er position thik thake tar jonne clear:both diye er float remove kore dilam */
-  clear: both;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #a01877;
